force-app/main/default/objects/SOLXYZCSO001__CSOUserRoleSynchronizationWork__c/SOLXYZCSO001__CSOUserRoleSynchronizationWork__c.object-meta.xml
<CustomObject>
    <description>Role information carring object to be allocated to usres for ECM</description>
    <label>CSOUserRoleSynchronizationWork</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>