force-app/main/default/objects/SOLXYZCSO001__CSOUserRoleSynchronizationWork__c/fields/SOLXYZCSO001__CSOUserRoleId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__CSOUserRoleId__c</fullName>
    <label>CSOUserRoleID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>