force-app/main/default/objects/SOLXYZCSO001__CSOUserRoleSynchronizationWork__c/fields/SOLXYZCSO001__SFDCUserId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SFDCUserId__c</fullName>
    <label>SFDCUserID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>