force-app/main/default/objects/SOLXYZCSO001__CSOUserRoleSynchronizationWork__c/fields/SOLXYZCSO001__SFDCUserRoleId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SFDCUserRoleId__c</fullName>
    <label>SFDCUserRoleID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>