force-app/main/default/objects/SOLXYZCSO001__CSOUserRoleSynchronizationWork__c/listViews/SOLXYZCSO001__All.listView-meta.xml
<ListView>
    <fullName>SOLXYZCSO001__All</fullName>
    <columns>NAME</columns>
    <columns>SOLXYZCSO001__CSOUserRoleId__c</columns>
    <columns>SOLXYZCSO001__SFDCUserId__c</columns>
    <columns>SOLXYZCSO001__SFDCUserRoleId__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
    <language>ja</language>
</ListView>